--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <h1>Ősziproject</h1>
+        <h1>Ősziproject kjabkfgahsifug</h1>
         <nav class="navbar navbar-expand-lg navbar-dark bg-brown" style="background-color: #a0522d;">
             <div class="container">
                 <a class="navbar-brand" href="#">Olvasnivalóink:</a>
@@ -119,5 +119,6 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+
 
 </html>
