--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <h1>Ősziproject kjabkfgahsifug</h1>
+        <h1>Ősziproject kjabkfgahsifugbkgkjh</h1>
         <nav class="navbar navbar-expand-lg navbar-dark bg-brown" style="background-color: #a0522d;">
             <div class="container">
                 <a class="navbar-brand" href="#">Olvasnivalóink:</a>
@@ -122,3 +122,4 @@
 
 
 </html>
+
